# bestimate

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  docker-compose.yml  pyproject.toml
monitoring/grafana/dashboards/: scraper.json
monitoring/prometheus/: prometheus.yml
scripts/: batch_parallel.py  batch_scrape.py  import_addresses.py  scrape_batch.py  xvfb-run-worker.sh
src/: celery_app.py  config.py
src/anti_detect/: cookies.py  headers.py  px_solver.py  timing.py
src/api/: app.py  routes.py
src/db/: models.py  session.py
src/monitoring/: metrics.py
src/proxy/: manager.py  provider.py
src/scraper/: client.py  detail.py  parser.py  search.py
src/worker/: scheduler.py  tasks.py
tests/: test_parser.py
tests/fixtures/: next_data_sample.json  search_results_sample.json
