[project]
name = "property-data-collector"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "curl_cffi>=0.7",
    "beautifulsoup4>=4.12",
    "celery[redis]>=5.3",
    "redis>=5.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "psycopg2-binary>=2.9",
    "alembic>=1.13",
    "fastapi>=0.109",
    "uvicorn>=0.27",
    "pydantic-settings>=2.0",
    "prometheus-client>=0.20",
    "click>=8.1",
    "playwright>=1.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.3",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
